# heavyedge-classify

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
doc/source/: conf.py  index.rst
src/: conftest.py
src/heavyedge_classify/: model.py
src/heavyedge_classify/api/: __init__.py
src/heavyedge_classify/plugins/: classify.py
src/heavyedge_classify/samples/: __init__.py  recipes.py
tests/: conftest.py  test_commands.py  test_model.py
